@@ -62,6 +62,7 @@ New features:
 A.F....... [ZBX-1357] updated Italian translation; thanks to Zabbix translators (Richlv)
 
 Bug fixes:
+...G...... [ZBX-6933] added substitution of eventlog parameter insertion strings (wiper)
 ...G...... [ZBX-7853] changed log level from warning to information when listener, active checks and collector processes start (igors)
 .......PS. [ZBX-7614] fixed incorrect activation of inactive host if its item has bad syntax (igors)
 A.F....... [ZBX-7829] fixed reserving of new ids for standalone installations (Sasha)
@@ -892,6 +893,7 @@ New features:
 A.F....... [ZBX-1357] updated Italian translation; thanks to Zabbix translators (Richlv)
 
 Bug fixes:
+...G...... [ZBX-6933] added substitution of eventlog parameter insertion strings (wiper)
 ...G...... [ZBX-7853] changed log level from warning to information when listener, active checks and collector processes start (igors)
 A.F.....S. [ZBX-7674] implemented batch processing of IT services to resolve deadlocks and improve performance (Eduard, wiper)
 ........S. [ZBX-5789] improved performance of processing discovered graphs by the low-level discovery rule (Sasha)
